@@ -197,6 +197,9 @@ if [ $JAVA_MAJOR_VERSION -ge 11 ]; then
 	JAVA_OPTS="--add-opens java.desktop/javax.swing.text.html=ALL-UNNAMED $JAVA_OPTS"
 	JAVA_OPTS="-Dorg.osgi.framework.system.capabilities=osgi.ee;osgi.ee=\"JavaSE\";version:List=\"1.8,15\" $JAVA_OPTS"
 fi
+if [ $JAVA_MAJOR_VERSION -ge 18 ]; then
+	JAVA_OPTS="-Djava.security.manager=allow $JAVA_OPTS"
+fi
 
 # enable this in order to turn off the splash screen:
 #JAVA_OPTS="-Dorg.freeplane.nosplash=true $JAVA_OPTS"
